# Dataspeed-Object-Detection

./: .gitignore  CMakeLists.txt  README.md  package.xml
launch/: action_recognition.launch  cob_people_object_detection_tensorflow_params.yaml  face_recognizer.launch  gem_demo.launch  object_detection.launch  object_detection_params.yaml  projection.launch  tracker.launch
msg/: People.msg  Person.msg  PersonStamped.msg  PositionMeasurementArray.msg
src/: action_recognition.py  cob_people_object_detection_tensorflow.py  face_recognizer.py  object_detection.py  person_tracker.py  projection.py  tracker.py
src/cob_people_object_detection_tensorflow/: detector.py
src/ds_object_detection_lib/: detector.py  utils.py
src/object_detection/: object_detections_GPU-then-CPU (1).ipynb
src/object_detection/.ipynb_checkpoints/: object_detections_GPU-then-CPU (1)-checkpoint.ipynb
